--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
-FROM ubuntu
-RUN apt update
-RUN apt install -y git python python-pip
+FROM ubuntu:xenial
+MAINTAINER treylitefm
+RUN apt update && apt upgrade -y
+RUN apt install -y git wget python python-pip
+
 RUN pip install flask youtube-dl
 CMD python server.py
