--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,13 @@
 FROM ubuntu:xenial
 MAINTAINER treylitefm
-RUN apt update && apt upgrade -y
-RUN apt install -y git wget python python-pip
 
+RUN apt update && apt upgrade -y
+RUN apt install -y python python-pip wget unzip
+
+RUN pip install --upgrade pip
 RUN pip install flask youtube-dl
-CMD python server.py
+
+RUN wget https://github.com/treylitefm/medio/zipball/master
+RUN unzip master -d /usr/src/ && rm master
+
+ENTRYPOINT DIR=$(ls /usr/src/) && python /usr/src/$DIR/flask/server.py
