--- a/chrome-ext/manifest.json
+++ b/chrome-ext/manifest.json
@@ -1,16 +1,15 @@
 {
     "manifest_version": 2,
-    "name": "Getting started example",
-    "description": "This extension shows a Google Image search result for the current page",
+    "name": "Medio Music Downloader",
+    "description": "This extension works in collaboration with the treylitefm/medio python app to download music",
     "version": "1.0",
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "swiper.png",
         "default_popup": "popup.html",
-        "default_title": "Click here!"
+        "default_title": "Hungry for music?"
     },
     "permissions": [
         "activeTab",
         "https://ajax.googleapis.com/",
-        "http://192.168.99.100:32782/"
     ]
 }
