--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:xenial
 MAINTAINER treylitefm
 
 RUN apt update && apt upgrade -y
-RUN apt install -y python python-pip wget unzip
+RUN apt install -y python python-pip wget unzip ffmpeg
 
 RUN pip install --upgrade pip
 RUN pip install flask youtube-dl
@@ -10,4 +10,4 @@ RUN pip install flask youtube-dl
 RUN wget https://github.com/treylitefm/medio/zipball/master
 RUN unzip master -d /usr/src/ && rm master
 
-ENTRYPOINT DIR=$(ls /usr/src/) && python /usr/src/$DIR/flask/server.py
+ENTRYPOINT DIR=$(ls /usr/src/) && ln -s /music /usr/src/$DIR/flask/music && python /usr/src/$DIR/flask/server.py
