Update dependencies and README
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/docker/docker-medio/Dockerfile
+++ b/docker/docker-medio/Dockerfile
@@ -1,11 +1,11 @@
 FROM ubuntu:xenial
 MAINTAINER treylitefm
 
-RUN apt update && apt upgrade -y
-RUN apt install -y python python-pip wget unzip ffmpeg
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y python python-pip wget unzip ffmpeg supervisor
 
 RUN pip install --upgrade pip
-RUN pip install flask flask-cors youtube-dl
+RUN pip install flask flask-cors youtube-dl redis rq
 
 RUN wget https://github.com/treylitefm/medio/zipball/master
 RUN unzip master -d /usr/src/ && rm master
