--- a/flask/supervisord.conf
+++ b/flask/supervisord.conf
@@ -23,7 +23,7 @@ process_name=%(program_name)s
 
 numprocs=1
 
-directory=/path/to/app
+directory=/var/medio/medio
 stopsignal=TERM
 
 autostart=true
@@ -35,7 +35,7 @@ process_name=%(program_name)s
 
 numprocs=1
 
-directory=/path/to/app
+directory=/var/medio/medio
 stopsignal=TERM
 
 autostart=true
