Add process_num to supervisord.conf. Necessary when workers > 1
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/flask/supervisord.conf
+++ b/flask/supervisord.conf
@@ -19,7 +19,7 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [program:medio]
 command=/usr/bin/python server.py
-process_name=%(program_name)s
+process_name=%(program_name)s_%(process_num)02d
 
 numprocs=1
 
@@ -31,9 +31,9 @@ autorestart=true
 
 [program:rqworker]
 command=/usr/local/bin/rq worker -c redis_settings
-process_name=%(program_name)s
+process_name=%(program_name)s_%(process_num)02d
 
-numprocs=1
+numprocs=3
 
 directory=/var/medio/medio/flask
 stopsignal=TERM
