Expose port 5000 on medio container
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/docker/docker-medio/Dockerfile
+++ b/docker/docker-medio/Dockerfile
@@ -12,4 +12,6 @@ RUN mkdir /var/medio
 RUN unzip master -d /var/medio/ && rm master
 RUN DIR=$(ls /var/medio/) && ln -s /var/medio/$DIR/flask/music /music && ln -s /var/medio/$DIR /var/medio/medio
 
+EXPOSE 5000
+
 ENTRYPOINT HOST=$(echo $DB_PORT_6379_TCP_ADDR) && PORT=$(echo $DB_PORT_6379_TCP_PORT) && cd /var/medio/medio/flask && /usr/bin/python configure.py $HOST $PORT && /usr/bin/supervisord -c /var/medio/medio/flask/supervisord.conf && /bin/bash
