--- a/docker/docker-medio/Dockerfile
+++ b/docker/docker-medio/Dockerfile
@@ -16,5 +16,5 @@ EXPOSE 5000
 
 WORKDIR /var/medio/medio/flask
 
-COPY docker-entrypoint.sh /
-ENTRYPOINT ["/docker-entrypoint.sh", "medio-redis-server", "6379"]
+COPY docker-entrypoint.sh .
+ENTRYPOINT ["./docker-entrypoint.sh", "medio-redis-server", "6379"]
