Move to docker-compose for deployment
Signed-off-by: treylitefm <griffin.omar@gmail.com>

--- a/docker-medio/src/supervisord.conf
+++ b/docker-medio/src/supervisord.conf
@@ -23,7 +23,7 @@ process_name=%(program_name)s_%(process_num)02d
 
 numprocs=1
 
-directory=/var/medio/medio/flask
+directory=/var/medio
 stopsignal=TERM
 
 autostart=true
@@ -35,7 +35,7 @@ process_name=%(program_name)s_%(process_num)02d
 
 numprocs=3
 
-directory=/var/medio/medio/flask
+directory=/var/medio
 stopsignal=TERM
 
 autostart=true
